# splitstellar

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  vercel.json  vitest.config.ts
app/: page.tsx  (+2 more)
contracts/: Cargo.toml
contracts/activity_contract/: Cargo.toml
contracts/activity_contract/src/: lib.rs
contracts/build_target/: .rustc_info.json
contracts/build_target/debug/.fingerprint/autocfg-fdc21703f5a45dc9/: lib-autocfg  lib-autocfg.json
contracts/build_target/debug/.fingerprint/block-buffer-6b9f2bdb0510353e/: lib-block_buffer  lib-block_buffer.json
contracts/build_target/debug/.fingerprint/crypto-common-077367a6e6f36ac8/: lib-crypto_common  lib-crypto_common.json
contracts/build_target/debug/.fingerprint/data-encoding-78d18a20fed30b84/: lib-data_encoding  lib-data_encoding.json
contracts/build_target/debug/.fingerprint/digest-bd85bf88d7c783fa/: lib-digest  lib-digest.json
contracts/build_target/debug/.fingerprint/either-fc96ae2a6774cd24/: lib-either  lib-either.json
contracts/build_target/debug/.fingerprint/equivalent-81775ab5d8154b89/: lib-equivalent  lib-equivalent.json
contracts/expense_contract/: Cargo.toml
contracts/expense_contract/src/: lib.rs
contracts/group_contract/: Cargo.toml
contracts/group_contract/src/: lib.rs
contracts/money_request_contract/: Cargo.toml
contracts/money_request_contract/src/: lib.rs
contracts/settlement_contract/: Cargo.toml
contracts/settlement_contract/src/: lib.rs
(+225 files in other folders)
