[workspace]
members = [
    "group_contract",
    "expense_contract",
    "settlement_contract",
    "money_request_contract",
    "activity_contract",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
